Migrate tests to JUnit5 (#48)
* Migrate tests to JUnit5

* Migrate annotations and imports
* Migrate assertions
* Remove public visibility for test classes and methods
* Minor code cleanup

* Ban JUnit 4 imports

---------

Co-authored-by: Daniel Beck <daniel-beck@users.noreply.github.com>