@@ -7,7 +7,6 @@ import static org.hamcrest.MatcherAssert.assertThat;
 
 import hudson.ExtensionList;
 import hudson.model.DirectoryBrowserSupport;
-import java.io.IOException;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
@@ -16,54 +15,69 @@ import org.htmlunit.Page;
 import org.htmlunit.WebResponse;
 import org.htmlunit.html.HtmlPage;
 import org.htmlunit.util.NameValuePair;
-import org.junit.Rule;
-import org.junit.Test;
-import org.jvnet.hudson.test.FlagRule;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.jvnet.hudson.test.JenkinsRule;
+import org.jvnet.hudson.test.junit.jupiter.WithJenkins;
 import org.kohsuke.accmod.restrictions.suppressions.SuppressRestrictedWarnings;
-import org.xml.sax.SAXException;
 
-public class ContentSecurityPolicyFilterTest {
-    @Rule
-    public JenkinsRule j = new JenkinsRule();
+@WithJenkins
+class ContentSecurityPolicyFilterTest {
 
-    @Rule
-    public FlagRule dbsCsp = FlagRule.systemProperty(DBS_CSP_SYSTEM_PROPERTY);
+    private JenkinsRule j;
+
+    private String dbsCsp;
+
+    @BeforeEach
+    void setUp(JenkinsRule rule) {
+        j = rule;
+        dbsCsp = System.getProperty(DBS_CSP_SYSTEM_PROPERTY);
+    }
+
+    @AfterEach
+    void tearDown() {
+        if (dbsCsp != null) {
+            System.setProperty(DBS_CSP_SYSTEM_PROPERTY, dbsCsp);
+        } else {
+            System.clearProperty(DBS_CSP_SYSTEM_PROPERTY);
+        }
+    }
 
     @Test
-    public void testRegularPageHeaders() throws IOException, SAXException {
+    void testRegularPageHeaders() throws Exception {
         try (JenkinsRule.WebClient wc = j.createWebClient()) {
             final HtmlPage htmlPage = wc.goTo("userContent/");
             assertThat(htmlPage.getWebResponse().getStatusCode(), is(200));
             final List<NameValuePair> cspHeaders = htmlPage.getWebResponse().getResponseHeaders().stream()
                     .filter(p -> p.getName().startsWith(CONTENT_SECURITY_POLICY_HEADER))
-                    .collect(Collectors.toList());
+                    .toList();
             assertThat(cspHeaders.size(), is(1));
             assertThat(cspHeaders.get(0).getValue(), startsWith(ContentSecurityPolicyConfiguration.DEFAULT_RULE));
         }
     }
 
     @Test
-    public void testBundledResource() throws IOException, SAXException {
+    void testBundledResource() throws Exception {
         try (JenkinsRule.WebClient wc = j.createWebClient().withThrowExceptionOnFailingStatusCode(false)) {
             final Page page = wc.goTo("apple-touch-icon.png", "image/png");
             assertThat(page.getWebResponse().getStatusCode(), is(200));
             final List<NameValuePair> cspHeaders = page.getWebResponse().getResponseHeaders().stream()
                     .filter(p -> p.getName().startsWith(CONTENT_SECURITY_POLICY_HEADER))
-                    .collect(Collectors.toList());
+                    .toList();
             assertThat(cspHeaders.size(), is(1));
             assertThat(cspHeaders.get(0).getValue(), startsWith(ContentSecurityPolicyConfiguration.DEFAULT_RULE));
         }
     }
 
     @Test
-    public void test404ErrorHeaders() throws IOException, SAXException {
+    void test404ErrorHeaders() throws Exception {
         try (JenkinsRule.WebClient wc = j.createWebClient().withThrowExceptionOnFailingStatusCode(false)) {
             final HtmlPage htmlPage = wc.goTo("thisUrlDoesNotExist");
             assertThat(htmlPage.getWebResponse().getStatusCode(), is(404));
             final List<NameValuePair> cspHeaders = htmlPage.getWebResponse().getResponseHeaders().stream()
                     .filter(p -> p.getName().startsWith(CONTENT_SECURITY_POLICY_HEADER))
-                    .collect(Collectors.toList());
+                    .toList();
             assertThat(cspHeaders.size(), is(1));
             assertThat(cspHeaders.get(0).getValue(), startsWith(ContentSecurityPolicyConfiguration.DEFAULT_RULE));
         }
@@ -71,7 +85,7 @@ public class ContentSecurityPolicyFilterTest {
 
     @SuppressRestrictedWarnings({DirectoryBrowserSupport.class})
     @Test
-    public void directoryBrowserSupportContradictsCspPluginWithReporting() throws IOException, SAXException {
+    void directoryBrowserSupportContradictsCspPluginWithReporting() throws Exception {
         try (JenkinsRule.WebClient wc = j.createWebClient()) {
             final Page page = wc.goTo("userContent/readme.txt", "text/plain");
             assertThat(page.getWebResponse().getStatusCode(), is(200));
@@ -87,7 +101,7 @@ public class ContentSecurityPolicyFilterTest {
 
     @SuppressRestrictedWarnings({DirectoryBrowserSupport.class})
     @Test
-    public void directoryBrowserSupportWinsOverCspPluginWithEnforcing() throws IOException, SAXException {
+    void directoryBrowserSupportWinsOverCspPluginWithEnforcing() throws Exception {
         ExtensionList.lookupSingleton(ContentSecurityPolicyConfiguration.class).setReportOnly(false);
         try (JenkinsRule.WebClient wc = j.createWebClient()) {
             final Page htmlPage = wc.goTo("userContent/readme.txt", "text/plain");
@@ -100,7 +114,7 @@ public class ContentSecurityPolicyFilterTest {
     }
 
     @Test
-    public void directoryBrowserSupportCustomWinsOverCspPluginWithEnforcing() throws IOException, SAXException {
+    void directoryBrowserSupportCustomWinsOverCspPluginWithEnforcing() throws Exception {
         final String customValue = "foo";
         System.setProperty(DBS_CSP_SYSTEM_PROPERTY, customValue);
         ExtensionList.lookupSingleton(ContentSecurityPolicyConfiguration.class).setReportOnly(false);
@@ -114,7 +128,7 @@ public class ContentSecurityPolicyFilterTest {
     }
 
     @Test
-    public void directoryBrowserSupportDisabledLosesToCspPluginWithEnforcing() throws IOException, SAXException {
+    void directoryBrowserSupportDisabledLosesToCspPluginWithEnforcing() throws Exception {
         System.setProperty(DBS_CSP_SYSTEM_PROPERTY, "");
         ExtensionList.lookupSingleton(ContentSecurityPolicyConfiguration.class).setReportOnly(false);
         try (JenkinsRule.WebClient wc = j.createWebClient()) {
@@ -129,7 +143,7 @@ public class ContentSecurityPolicyFilterTest {
     }
 
     @Test
-    public void resourceDomainHasNoHeaderWithReporting() throws IOException, SAXException {
+    void resourceDomainHasNoHeaderWithReporting() throws Exception {
         ResourceDomainConfiguration.get().setUrl(j.getURL().toExternalForm().replace("localhost", RRURL_HOSTNAME));
         try (JenkinsRule.WebClient wc = j.createWebClient().withRedirectEnabled(true)) {
             final Page htmlPage = wc.goTo("userContent/readme.txt", "text/plain");
@@ -140,7 +154,7 @@ public class ContentSecurityPolicyFilterTest {
     }
 
     @Test
-    public void resourceDomainHasNoHeaderWithEnforcing() throws IOException, SAXException {
+    void resourceDomainHasNoHeaderWithEnforcing() throws Exception {
         ResourceDomainConfiguration.get().setUrl(j.getURL().toExternalForm().replace("localhost", RRURL_HOSTNAME));
         ExtensionList.lookupSingleton(ContentSecurityPolicyConfiguration.class).setReportOnly(false);
         try (JenkinsRule.WebClient wc = j.createWebClient().withRedirectEnabled(true)) {
